# UPS

./: README.md
Bonus_exercises/: calculator.c  calculator_client.c  echo.c  echo_client.c  reverse_client.c
Bonus_exercises/Clients/: commands_build_run.txt  echo_client.c
Bonus_exercises/Server/: server_homework.c
C++_testing/: Client.cpp  Game.cpp  Game.h  Game_test.cpp  Game_test.h  Server.cpp  User.cpp  User.h  User_test.cpp  User_test.h  main.cpp
Semester_work/Client/: Client.py  Constants.py  Create_executable.bat  Create_executable.sh  Enums.py  Game.py  Heartbeat.py  Logger.py  LoginScene.py  MainWindow.py  MessageBoxes.py  Scenes.py  Socket.py
Semester_work/Server/: CMake  CMakeLists.txt  Constants.h  Enums.h  Game.cpp  Game.h  Logger.cpp  Logger.h  Server.cpp  User.cpp  User.h
Testing/: Client.c  Server.c
